--- a/META.yml
+++ b/META.yml
@@ -21,9 +21,10 @@ requires:
   Calendar::List: 0.26
   Date::Holidays: 0.15
   DateTime: 0
+  I18N::Langinfo: 0
   Moose: 2
   MooseX::Role::Pluggable: 0.02
   perl: 5.006
 resources:
   repository: https://github.com/hashbangperl/perl-calendar-model
-version: 0.02
+version: 0.03
